[gd_scene load_steps=16 format=2]

[ext_resource path="res://menus/load_game.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/menu-button-down.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/menu-button-hover.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/menu-button-up.png" type="Texture" id=5]
[ext_resource path="res://ui/Silver.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 86
outline_size = 4
outline_color = Color( 0.0862745, 0.223529, 0.266667, 1 )
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 64
outline_size = 4
outline_color = Color( 0.0862745, 0.223529, 0.266667, 1 )
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 256, 256 )
margin_left = 48.0
margin_right = 48.0
margin_top = 48.0
margin_bottom = 48.0

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 3 )
region_rect = Rect2( 8, 8, 248, 248 )
margin_left = 48.0
margin_right = 48.0
margin_top = 48.0
margin_bottom = 48.0

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 256, 256 )
margin_left = 208.0
margin_right = 208.0
margin_top = 48.0
margin_bottom = 48.0

[sub_resource type="Theme" id=10]
default_font = SubResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.537255, 0.141176, 0.141176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
margin_right = 1200.0
margin_bottom = 975.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 100
custom_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer"]
margin_left = 49.0
margin_top = 100.0
margin_right = 1151.0
margin_bottom = 875.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 160
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="HBoxContainer/MarginContainer/VBoxContainer"]
margin_left = 431.0
margin_right = 670.0
margin_bottom = 96.0
size_flags_horizontal = 4
size_flags_vertical = 1
theme = SubResource( 2 )
text = "Load Game"

[node name="slots" type="HBoxContainer" parent="HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 256.0
margin_right = 1102.0
margin_bottom = 447.0
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slot_1_save" type="VBoxContainer" parent="HBoxContainer/MarginContainer/VBoxContainer/slots"]
margin_right = 334.0
margin_bottom = 191.0

[node name="button" type="Control" parent="HBoxContainer/MarginContainer/VBoxContainer/slots/slot_1_save"]
margin_right = 334.2
margin_bottom = 115.2
rect_min_size = Vector2( 334.2, 115.2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button" type="Button" parent="HBoxContainer/MarginContainer/VBoxContainer/slots/slot_1_save/button"]
margin_right = 557.0
margin_bottom = 192.0
rect_scale = Vector2( 0.6, 0.6 )
size_flags_horizontal = 0
size_flags_vertical = 0
theme = SubResource( 4 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
text = "Slot 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="HBoxContainer/MarginContainer/VBoxContainer/slots/slot_1_save"]
margin_top = 119.0
margin_right = 334.0
margin_bottom = 191.0
theme = SubResource( 10 )
text = "Empty"
align = 1

[node name="slot_2_save" type="VBoxContainer" parent="HBoxContainer/MarginContainer/VBoxContainer/slots"]
margin_left = 384.0
margin_right = 718.0
margin_bottom = 191.0

[node name="button" type="Control" parent="HBoxContainer/MarginContainer/VBoxContainer/slots/slot_2_save"]
margin_right = 334.2
margin_bottom = 115.2
rect_min_size = Vector2( 334.2, 115.2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button" type="Button" parent="HBoxContainer/MarginContainer/VBoxContainer/slots/slot_2_save/button"]
margin_right = 557.0
margin_bottom = 192.0
rect_scale = Vector2( 0.6, 0.6 )
size_flags_horizontal = 0
size_flags_vertical = 0
theme = SubResource( 4 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
text = "Slot 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="HBoxContainer/MarginContainer/VBoxContainer/slots/slot_2_save"]
margin_top = 119.0
margin_right = 334.0
margin_bottom = 191.0
theme = SubResource( 10 )
text = "Empty"
align = 1

[node name="slot_3_save" type="VBoxContainer" parent="HBoxContainer/MarginContainer/VBoxContainer/slots"]
margin_left = 768.0
margin_right = 1102.0
margin_bottom = 191.0

[node name="button" type="Control" parent="HBoxContainer/MarginContainer/VBoxContainer/slots/slot_3_save"]
margin_right = 334.2
margin_bottom = 115.2
rect_min_size = Vector2( 334.2, 115.2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button" type="Button" parent="HBoxContainer/MarginContainer/VBoxContainer/slots/slot_3_save/button"]
margin_right = 557.0
margin_bottom = 192.0
rect_scale = Vector2( 0.6, 0.6 )
size_flags_horizontal = 0
size_flags_vertical = 0
theme = SubResource( 4 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
text = "Slot 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="HBoxContainer/MarginContainer/VBoxContainer/slots/slot_3_save"]
margin_top = 119.0
margin_right = 334.0
margin_bottom = 191.0
theme = SubResource( 10 )
text = "Empty"
align = 1

[node name="back" type="Button" parent="HBoxContainer/MarginContainer/VBoxContainer"]
margin_left = 303.0
margin_top = 607.0
margin_right = 799.0
margin_bottom = 775.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource( 4 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="HBoxContainer/MarginContainer/VBoxContainer/slots/slot_1_save/button/button" to="." method="_slot_1_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/VBoxContainer/slots/slot_2_save/button/button" to="." method="_slot_2_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/VBoxContainer/slots/slot_3_save/button/button" to="." method="_slot_3_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/VBoxContainer/back" to="." method="_on_back_pressed"]
